// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid text input 1`] = `
.pf-c-form-control {
  display: block;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
  border-bottom-color: #007bba;
}

<textarea
  aria-invalid={true}
  aria-label="invalid textarea"
  className="pf-c-form-control"
  onChange={[Function]}
  required={false}
  value="test textarea"
/>
`;

exports[`simple text input 1`] = `
.pf-c-form-control {
  display: block;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
  border-bottom-color: #007bba;
}

<textarea
  aria-invalid={false}
  aria-label="simple textarea"
  className="pf-c-form-control"
  onChange={[Function]}
  required={false}
  value="test textarea"
/>
`;
